Send emails to freelancer when accept/ reject proposals